[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-safety-middleware"
version = "0.1.0"
description = "Policy-driven middleware that enforces LLM input and output guardrails."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "httpx>=0.28,<1.0",
]

[tool.setuptools.packages.find]
include = ["llm_guard*"]
